Make complete request button more clear

--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -9,6 +9,6 @@
 	<br>
 	<br>
 	<div class="text-center">
-		<%= link_to "Delete", @request, method: :delete, class: "btn btn-primary" %>
+		<%= link_to "Complete", @request, method: :delete, class: "btn btn-danger btn-lg" %>
 	</div>
 </div>
