improved the layout of delete buttons

--- a/app/assets/stylesheets/requests.scss
+++ b/app/assets/stylesheets/requests.scss
@@ -29,6 +29,10 @@ $white-trans: rgba(255, 255, 255, 0.4);
 
 }
 
+.deletebtn{
+      margin-bottom: 20px;
+}
+
 .request_type{
 	margin-top: 5px;
 	margin-bottom: 10px;
