--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -7,7 +7,7 @@
     <%= render partial: 'requests_for_queue_type' %>
   </div>
   <br>
-  <div class = "text-center">
+  <div class = "deletebtn text-center">
     <%= render partial: 'delete_options' %>
   </div>
 </div>
