Prettify a few things and add more users to seeds

--- a/app/views/layouts/_instructorheader.html.erb
+++ b/app/views/layouts/_instructorheader.html.erb
@@ -1,4 +1,4 @@
-<h1 id="appLogo">Student Queue Manager</h1>
+<h1 id="appLogo">SQM</h1>
 <p id ="username"> Logged in As:  <%= current_user.full_name %></p>
 <nav>
   <ul class="nav navbar-nav navbar-right">
